# SDV_Projet_Data_IA

./: .gitignore  AGENT.md  README.md  build_notebook.py  main.py  notebook.html  notebook.ipynb  pyproject.toml
src/anssi_cve/: __init__.py  config.py  consolidation.py  cve_extraction.py  enrichment.py  http_client.py  local_source.py  pipeline.py  rss.py
webapp/: manage.py
webapp/anssi_web/: asgi.py  settings.py  urls.py  wsgi.py
webapp/vulnerabilities/: admin.py  alerts.py  apps.py  charts.py  models.py  urls.py  views.py
webapp/vulnerabilities/management/commands/: import_csv.py
webapp/vulnerabilities/migrations/: 0001_initial.py
webapp/vulnerabilities/templates/vulnerabilities/: _pagination.html  _severity_badge.html  alerts.html  base.html  bulletin_detail.html  bulletin_list.html  dashboard.html  vulnerability_detail.html  vulnerability_list.html
webapp/vulnerabilities/templatetags/: glossary.py  sort_tags.py
