[project]
name = "anssi-cve-analysis"
version = "0.1.0"
description = "Extraction, enrichissement (MITRE/EPSS) et analyse des avis et alertes ANSSI/CERT-FR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anssi_cve"]
